# unsubscribeme

./: .env.example  .gitignore  CONTINUE_PROMPT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/: bot.demo.sqlite  bot.sqlite
data/prompts/: bullshit_detector_v2.txt
deploy/systemd/: unsubscribeme.service
docs/: DEPLOY_SYSTEMD.md  telegram_youtube_rss_bot_architecture.md
src/rssbot/: __init__.py  ai_summarizer.py  bot.py  bullshit_detector.py  config.py  db.py  main.py  rss.py  rules.py  scheduler.py  web.py  web_summarize.py  youtube_context.py  youtube_summarize.py  youtube_transcribe.py
src/utils/: yt_channel_id.py
tests/: test_ai_summarizer.py  test_bot_ai_summary.py  test_bullshit_detector.py  test_config.py  test_config_utils.py  test_list_links.py  test_manual_events_input.py  test_rss_fetch.py  test_rss_parsing.py  test_rss_utils.py  test_rules.py  test_scheduler_event_delivery.py  test_web_summarize.py  test_youtube_channel_id.py  test_youtube_summarize.py  test_youtube_transcribe.py  test_yt_channel_id_utils.py
