[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "unsubscribeme"
version = "0.1.0"
description = "Telegram bot to fetch and filter YouTube RSS with immediate, digest, and on-demand delivery modes."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "UnsubscribeMe", email = "devnull@example.com" }
]
dependencies = [
  "aiogram>=3.2.0",
  "aiohttp>=3.9.0",
  "feedparser>=6.0.10",
  "SQLAlchemy>=2.0.20",
  "APScheduler>=3.10.4",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "youtube-transcript-api>=0.6.2",
  "openai>=1.40.0",
]

[project.scripts]
unsubscribeme = "rssbot.main:main"

[tool.ruff]
line-length = 100

[project.optional-dependencies]
test = [
  "pytest>=7.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/rssbot", "src/utils"]
